--- a/test-app/src/app.m.css
+++ b/test-app/src/app.m.css
@@ -1,5 +1,8 @@
+@import '../external/test-theme/variables';
+
 .root {
-	background: red;
+	composes: root from '../external/test-theme/theme.m.css';
 	width: 100px;
 	height: 100px;
+	color: var(--foreground-color);
 }
