generate windows fixtures

--- a/test-app/fixtures/windows/dev/main.css
+++ b/test-app/fixtures/windows/dev/main.css
@@ -6,13 +6,13 @@
  * All rights reserved
  * 
  */
-.QHEFgSeI {
+.main__app__QHEFg {
 	background: purple;
 }
-._2d86pM5c {
+.theme-m__root__2d86p {
 	background: green;
 }
-.YxttPEx- {
+.app-m__root__YxttP {
 	width: 100px;
 	height: 100px;
 	color: red;
