--- a/test-app/src/main.css
+++ b/test-app/src/main.css
@@ -1,4 +1,5 @@
-@import '@fortawesome/fontawesome-free/css/all.css';
+@import '~@fortawesome/fontawesome-free/css/all.css';
+@import '~@dojo/themes/dojo/index.css';
 
 .app {
 	background: purple;
